--- a/App/templates/App/login.html
+++ b/App/templates/App/login.html
@@ -48,11 +48,8 @@
 
 
 <script>
-    { %
-        if not user.is_authenticated %
-    }
-    $("ul.nav.navbar-nav.navbar-right").css("display", "none"); { % endif %
-    }
+    {% if not user.is_authenticated %}
+    $("ul.nav.navbar-nav.navbar-right").css("display", "none"); {% endif %}
 </script>
 
 {% endblock %}
